methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:3: error: not found: value estfaceMur
  if (estfaceMur() == true ){
      ^