methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (estfaceMur() == true ){
    return false
  }
  avance()
  if (getCouleurSol == Color.green){
    recule()
    return true
  } else {
    recule()
    return false
  }
}

